@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Fri Mar 16 15:48:06 +0100 2007
+// Sat Aug 18 08:11:28 +0200 2007
 //
 // (C) 2005 Jb Evain
 //
@@ -1000,7 +1000,7 @@ namespace Mono.Cecil.Cil {
 			"ldelem.any", 0xff, 0xa3, 1,
 			Code.Ldelem_Any, FlowControl.Next,
 			OpCodeType.Objmodel, OperandType.InlineType,
-			StackBehaviour.Popi, StackBehaviour.Push1);
+			StackBehaviour.Popref_popi, StackBehaviour.Push1);
 
 		public static readonly OpCode Stelem_Any = new OpCode (
 			"stelem.any", 0xff, 0xa4, 1,
